--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ h2{
 }
 
 .green-box{
-    width:500px;
+    width:450x;
     height:450px; 
     position:relative;
     left:50px;
@@ -65,8 +65,8 @@ h2{
     padding: 15px;
   }
   .pink-box{
-    width:500px;
-    height:400px; 
+    width:450px;
+    height:450px; 
     position:relative;
     left:500px;
     margin: 10px 15px 20px;
@@ -77,7 +77,7 @@ h2{
   }
 
   .humidity-box{
-    width:500px;
+    width:450px;
     height:450px;
     position:relative;
     left:50px;
@@ -88,8 +88,8 @@ h2{
     padding: 15px;
    }
    .humidity-vizbox{
-    width:500px;
-    height:400px;
+    width:450px;
+    height:450px;
     position:relative;
     left:500px;
     margin: 10px 15px 20px;
@@ -98,3 +98,21 @@ h2{
     background-color:white;
     padding: 15px;
    }
+
+   .hcss {
+    display: grid;
+    justify-content: space-evenly;
+    float: left;
+  }
+
+ .row1 {
+  display: grid;
+  justify-content: space-evenly;
+  float:right;
+  position: absolute;
+  right: 0;
+ }
+
+ h3 {
+  font: bold;
+ }
